@@ -34,6 +34,8 @@ Bugfixes
 - Made message part optional in HTTP status response when parsing it in
   peer.http.HttpResponse::readHeader()
   (hinckel)
+- Fixed functionality of peer.ldap.LDAPQuery::getAttrsOnly()
+  (wagner)
 
 Features
 ~~~~~~~~
@@ -41,6 +43,8 @@ Features
   (friebe)
 - Made multiple forward-compatibility related adjustments
   (friebe, kiesel)
+- Added peer.ldap.LDAPQuery::setAttrsOnly()
+  (wagner)
 
 Version 5.6.9, released 2008-09-03
 ----------------------------------
@@ -269,7 +273,7 @@ Bugfixes
   Command class' -c / -cp options
   (friebe)
 - Fixed HttpScriptletRequest::getData never read from php://input
-  (ruben)
+  (wagner)
 
 Features
 ~~~~~~~~
